[gd_scene load_steps=5 format=3 uid="uid://0mu4e83ym175"]

[ext_resource type="Script" path="res://gui/notification/scripts/item_notification_box.gd" id="1_dngtc"]
[ext_resource type="Texture2D" uid="uid://cqnvoec8814id" path="res://gui/notification/assets/item_frame.png" id="2_0ty4x"]
[ext_resource type="Texture2D" uid="uid://cabhepq12dnmk" path="res://gui/notification/assets/notification_box.png" id="2_4jbo4"]
[ext_resource type="FontFile" uid="uid://brkm5d1yg37hw" path="res://gui/fonts/monogram.ttf" id="2_yv4n2"]

[node name="ItemNotificationBox" type="MarginContainer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -60.0
offset_right = 137.0
offset_bottom = -20.0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 0
theme_override_constants/margin_left = 12
script = ExtResource("1_dngtc")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_4jbo4")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="ItemFrame" type="TextureRect" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -10.0
offset_right = 37.0
offset_bottom = 10.0
grow_vertical = 2
texture = ExtResource("2_0ty4x")
stretch_mode = 5

[node name="ItemSprite" type="TextureRect" parent="NinePatchRect/ItemFrame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 34
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ItemName" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_yv4n2")
theme_override_font_sizes/font_size = 18
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
